1. Added custom authGuard to handle navbar element display and issue where if url is manually tweaked it still redirects to home or weather even if not authenticated 2.  Added NavigationEnd to track route changes in real time, should subscribe to the Angular Router events 3. Clear error message if input is empty 4. Added custom navbar color and logo 5. Added logic for navbar visibility

--- a/cityweather-app/src/app/components/home/home.component.html
+++ b/cityweather-app/src/app/components/home/home.component.html
@@ -10,9 +10,9 @@
       </p>
     </div>
 
-    <form (submit)="searchCity(); $event.preventDefault()" class="w-100">
+    <form (submit)="searchCity();" class="w-100">
       <div class="mb-2">
-        <input type="text" class="form-control form-control-lg" [(ngModel)]="city" name="city" required
+        <input type="text" class="form-control form-control-lg" [(ngModel)]="city" (ngModelChange)="onCityInputChange($event)" name="city" required
           placeholder="Enter city" />
       </div>
 
