--- a/cityweather-app/src/app/components/navbar/navbar.component.html
+++ b/cityweather-app/src/app/components/navbar/navbar.component.html
@@ -1,29 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">CityWeather</a>
+<nav *ngIf="showNavbar" class="navbar navbar-expand-lg navbar-dark custom-navbar-color">
+    <div class="container-fluid">
+        <!-- Brand (non-clickable) -->
+        <span class="navbar-brand">
+            <img src="assets/cityweather.png" alt="CityWeather Logo" class="logo">
+        </span>
 
-    <!-- Toggler button for mobile -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-      aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <!-- Toggler for mobile collapse -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="navbarContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item" *ngIf="isAuthenticated && currentRoute !== '/home'">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item" *ngIf="isAuthenticated && currentRoute !== '/weather'">
-          <a class="nav-link" routerLink="/weather">Weather</a>
-        </li>
-      </ul>
+        <!-- Collapsible navbar content -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- Left nav links -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item" *ngIf="currentRoute !== '/home'">
+                    <a class="nav-link" routerLink="/home">Home</a>
+                </li>
+                <li class="nav-item" *ngIf="currentRoute !== '/weather'">
+                    <a class="nav-link" routerLink="/weather">Weather</a>
+                </li>
+            </ul>
 
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item" *ngIf="isAuthenticated">
-          <button class="btn btn-outline-light" (click)="logout()">Logout</button>
-        </li>
-      </ul>
+            <!-- Right logout button -->
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <button class="btn btn-outline-light" (click)="logout()">Logout</button>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
