--- a/cityweather-app/src/app/components/home/home.component.html
+++ b/cityweather-app/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="overlay"></div>
   <div class="center-box text-center text-white">
     <div *ngIf="user">
-      <p>{{ user.name }}</p>
+      <p>Hi, {{ user.name }} 🎉</p>
       <p>
         <a href="https://github.com/{{ user.nickname }}" target="_blank">
           https://github.com/{{ user.nickname }}
@@ -20,7 +20,7 @@
         {{ errorMessage }}
       </div>
 
-      <button class="btn btn-primary btn-lg w-80" type="submit">
+      <button class="btn btn-primary btn-lg w-100" type="submit">
         Display Weather
       </button>
     </form>
