1. Added signal (component and service) 2. Added mat spinner 3. Add navbar to landing page is user is logged in 4. Remove Login button is user is logged in

--- a/cityweather-app/src/app/components/home/home.component.html
+++ b/cityweather-app/src/app/components/home/home.component.html
@@ -23,6 +23,9 @@
       <button class="btn btn-primary btn-lg w-100" type="submit">
         Display Weather
       </button>
+
+      <mat-spinner style="margin: 0 auto;" mode = "indeterminate" [diameter]="30" *ngIf="weatherService.isLoading()">Loading forecast...</mat-spinner>
+
     </form>
 
 
