--- a/cityweather-app/src/app/components/landing-page/landing-page.component.html
+++ b/cityweather-app/src/app/components/landing-page/landing-page.component.html
@@ -6,6 +6,6 @@
             Welcome to the weather forecast web application. Please login with your Github user to use the application
             and view the weather in your city.
         </p>
-        <button class="btn btn-primary btn-lg" (click)="login()">Login with GitHub</button>
+        <button *ngIf = "!isUserLoggedIn()" class="btn btn-primary btn-lg" (click)="login()">Login with GitHub</button>
     </div>
 </div>
